fixed protruding footer icon background
the absolute positioned white area behind the html5 icon was slightly too large and visible outside the shield shape

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -24,7 +24,7 @@ footer .icon-background-circle {
 footer .icon-background-shield {
     position: absolute;
     top: 0.2rem;
-    bottom: 0.4rem;
+    bottom: 0.45rem;
     right: 0.2rem;
     left: 0.2rem;
 }
